--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,15 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+#app_dev_logo {
+  height: 320px;
+  margin-top: 50px;
+}
+#app_dev_logo:hover {
+  transform: scale(1.02);
+  filter: brightness(1.1);
+}
+
 .navbar {
   background: rgba(0, 0, 0, 0.8);
   padding: 1em 0;
@@ -112,7 +121,7 @@ button:active {
 #mentor-groups h2 {
   font-size: 2.5rem;
   margin-bottom: 1em;
-  color: #df84ae;
+  color: #dab7eb;
 }
 
 #mentor-groups p {
